# My-auth-system

./: .env  Cargo.toml  docker-compose.yaml
migrations/2020-08-24-065658_init_db/: up.sql
src/: main.rs
src/config/: mod.rs
src/handlers/: mod.rs
src/models/: user.rs
